--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"kontra": "^6.2.0",
 		"lodash": "^4.17.11",
 		"socket.io": "^2.2.0",
+		"nodemon": "^1.19.0",
 		"socket.io-client": "^2.2.0"
 	},
 	"devDependencies": {
